src/test/deca/context/invalid/bad_identifier.deca
// Description:
//    Teste une declaration de variable qui manque de terminaison ;
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

{
    println(true);
}
